--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -176,6 +176,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
     implementation project(':react-native-reanimated')
     implementation 'com.android.support:multidex:1.0.3'
     implementation project(':@textile_react-native-sdk')
